# copyclip

./: .copyclipignore  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  copyclip  copyclip.py  install.ps1  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.playwright-mcp/: page-2026-04-13T11-47-27-697Z.yml  page-2026-04-13T11-51-09-591Z.yml  page-2026-04-13T11-53-50-774Z.yml  page-2026-04-13T11-56-07-262Z.yml  page-2026-04-13T15-41-51-131Z.yml  page-2026-04-13T15-41-59-055Z.yml  page-2026-04-13T16-06-46-643Z.yml  page-2026-04-13T16-41-11-784Z.yml  page-2026-04-13T16-41-19-538Z.yml  page-2026-04-13T17-01-52-702Z.yml  page-2026-04-13T19-46-12-818Z.yml
corpus/: cuaderno-bench.jsonl
docs/: API_CONTRACT_V1.md  COGNITIVE_CONNECTION_SPEC.md  COGNITIVE_DEBT_CONTRACT.md  COMPETITIVE_BENCHMARK.md  CONTEXTUAL_LEGACY_FORMAT.md  DRIFT_CALIBRATION.md  HANDOFF_PACKET_CONTRACT.md  IMPLEMENTATION_SPEC_III.md  LANGUAGE_SUPPORT.md  LOCAL_DEVELOPMENT.md  MCP_INTENT_AUTHORITY_SPEC.md  PROJECT_INTELLIGENCE_V1.md  PROJECT_INTELLIGENCE_V2.md  REACQUAINTANCE_BRIEFING_CONTRACT.md  REJECTED.md  RELEASE_PREP_CHECKLIST.md  SCALING_EXECUTION_PLAN_V1.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
scripts/: dev-smoke.sh  qa_gate.sh  smoke_e2e.sh
tests/: ask_project_eval_fixture.py  test_agents_system.py  test_analyzer_composite_scores.py  test_anchor_blast_radius.py  test_anchor_commit_change_graph.py  test_anchor_get_call_path.py  test_anchor_get_rationale.py  test_ask_project_evaluation.py  test_ask_project_provenance.py  test_ask_project_ranking.py  test_ast_extractor_enhancements.py  test_bench_artifact.py  test_bench_asserts.py  test_bench_cli.py  test_bench_corpus.py  test_bench_corpus_content.py  test_bench_integration.py  test_bench_live_smoke.py  test_bench_regress.py  test_bench_runner.py  test_bench_score.py  test_call_synth.py  test_capture.py  test_cognitive_debt_api.py  test_cognitive_debt_breakdown.py  test_cognitive_debt_contract.py  test_cognitive_load_unification.py  test_compositor_altitude_gate.py  test_compositor_rationale_gate.py  test_cuaderno_anchor.py  test_cuaderno_anthropic_client.py  test_cuaderno_anthropic_stream.py  test_cuaderno_artifact_honesty.py  test_cuaderno_ask_stream.py  (+71 more)
(+236 files in other folders)
